refactor: tidy plugin toadlet routing (#616)